--- a/FluentSharp.CoreLib.csproj
+++ b/FluentSharp.CoreLib.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".travis.yml" />
+    <None Include="appveyor.yml" />
     <None Include="FluentSharp.CoreLib.nuspec" />
     <Compile Include="APIs\API_NuGet.cs" />
     <Compile Include="ExtensionMethods\AppDomain\AppDomain_ExtensionMethods_ExecuteCode.cs" />
