testing appveyor.yml artifacts generation

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,3 +2,7 @@ version: 1.0.{build}
 build:
   project: FluentSharp.CoreLib.sln
   verbosity: minimal
+
+artifacts:
+  - path: test.zip
+    name: MyApp
