updated Nuget commit, fixed Tests project

--- a/src/FluentSharp.CoreLib.csproj
+++ b/src/FluentSharp.CoreLib.csproj
@@ -249,7 +249,9 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Apache.2.0.license.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
