--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,12 @@ _UpgradeReport_Files
 _ReSharper.*
 bin
 obj
+packages
 *.user
 UpgradeLog.xml
 *.suo
 *.pidb
 *.userprefs
 *.nupkg
+*.ncrunchsolution
+*.ncrunchproject
