--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,9 @@
-version: 1.0.{build}
+#version: 6.0.1.{build}
+
+install:
+  - cmd: sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+  - cmd: git submodule -q update --init          
+
 
 build:
   project: FluentSharp.CoreLib.sln
