--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-#version: 6.0.1.{build}
+version: 6.0.1.{build}
 
 install:
   - cmd: sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
