--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,8 +26,8 @@ assembly_info:
   assembly_file_version: "{version}"
   assembly_informational_version: "{version}"
 
-after_test:
-  - nuget pack src/FluentSharp.CoreLib.nuspec
+before_test:
+  - nuget pack src/FluentSharp.CoreLib.nuspec -Version %appveyor_build_version%
 
 artifacts:
   - path: '*.nupkg' 
