--- a/src/FluentSharp.CoreLib.nuspec
+++ b/src/FluentSharp.CoreLib.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>FluentSharp.CoreLib</id>
-        <version>$version$</version>
+        <version>$Version$</version>
         <title>FluentSharp - CoreLib</title>
         <authors>O2 Platform</authors>
         <owners>O2 Platform</owners>
