--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,5 @@
 version: 6.0.1.{build}
+configuration: Debug
 
 install:
   - cmd: sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
@@ -27,7 +28,7 @@ assembly_info:
   assembly_informational_version: "{version}"
 
 before_test:
-  - nuget pack src/FluentSharp.CoreLib.nuspec -Version %appveyor_build_version%
+  - nuget pack src/FluentSharp.CoreLib.nuspec -Version %appveyor_build_version% Configuration=%configuration%
 
 artifacts:
   - path: '*.nupkg' 
