--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,4 +34,6 @@ artifacts:
 
 deploy:
   provider: NuGet  
+  api_key:
+    secure: x5HJMlw9Ik+PLRN6tpUy4lbSz3gPMSHcjQRHjuUn/URW8Z45NoUhvIs/yNi3Kpfd
   artifact: '*.nupkg' 
