Also copying the file to the dotnet folder
as per http://stackoverflow.com/questions/34611919/how-to-package-a-portable-net-library-targeting-net-core

--- a/src/FluentSharp.CoreLib.nuspec
+++ b/src/FluentSharp.CoreLib.nuspec
@@ -29,5 +29,6 @@
       </metadata>  
       <files>
         <file src=".\bin\Debug\FluentSharp.CoreLib.dll" target=".\lib\net35\FluentSharp.CoreLib.dll" />
+        <file src=".\bin\Debug\FluentSharp.CoreLib.dll" target=".\lib\dotnet\FluentSharp.CoreLib.dll" />
       </files>  
 </package>
